# CheatAgent

./: .gitignore  CheatAgent.md  PolarSoul.md  README_DEV.md  Readme.md  Show.md  polaris.json  pyproject.toml  roadmap.md  run.py  worker.md  wrongway.md
benchmark/reports/: README.md  RESULTS.md  beta_v1_eval.json  beta_v2_eval.json  smoke_v1_eval.json
benchmark/tier_b/: price_trajectory.json
decisions/: 001-benchmark-strategy.md  002-dual-pipeline-architecture.md  003-deception-detection-stack.md  004-interaction-strategy-orchestration.md  005-claim-truth-inference-pipeline.md  006-test-strategy.md  007-agent-rebuild.md  008-cheat-agent-langgraph.md  009-normalize-layer.md  010-fusion-td-beta-gt-expand.md  011-visualization-dashboard.md
reference/: benchmark-landscape.md  deception-detection-methods.md
scripts/: build_dashboard.py  cross_user_td.py  evaluate_dataset.py  expand_latent_gt.py  generate_dataset.py  run_benchmark_pipeline.py  run_beta_pipeline.sh
service/: README.md  start.sh  web_workflow_service.py
skills/cheat-agent/: README.md  SKILL-cover-qa.md  SKILL-info-design-disclosure.md  SKILL-info-manipulation-bias.md  SKILL-reactance-biased-statement.md  SKILL-router.md  SKILL-trap-question.md
src/market_truth_agent/: __init__.py  models.py
test/: conftest.py
test/agents/: conftest.py  test_alpha_dataset.py  test_fusion.py  (+7 more)
wrongway/: 01-agent-design.md  02-benchmark-dataset.md  03-gt-isolation-metrics.md  04-analysis-pipeline.md  05-llm-ops.md  06-external-data.md  07-persona-prompt.md  README.md
套话skill/: README.md
腾讯文档/: README.md
(+244 files in other folders)
